<resources>
    <string name="app_name">Morhealth</string>
    <string name="signin_text">Iniciar Sesión</string>
    <string name="signup_text">Registro</string>
    <string name="forgot_password">Olvidaste tu contraseña?</string>

    <string name="enter_username">Cuál es su usuario?</string>
    <string name="enter_info">Ingrese su información</string>
    <string name="select_gender">Cuál es tu género?</string>
    <string name="enter_age">Indica tu edad</string>
    <string name="enter_email">Ingresa tu correo de contacto</string>
    <string name="enter_password">Ingresa tu contraseña</string>

    <string name="bar_title">Morhealth</string>
    <string name="home">Inicio</string>
    <string name="notifications">Notificaciones</string>
    <string name="calendar">Calendario</string>
    <string name="profile">Mi perfil</string>
    <string name="settings">Configuración</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="account">Cuenta</string>
    <string name="about">Acerca de</string>
    <string name="navigation_drawer_close">Cerrar</string>
    <string name="welcome">Bienvenido</string>
    <string name="fitness">Fitness</string>
    <string name="health">Salud</string>
    <string name="heartRate">Frecuencia Cardiaca</string>
    <string name="dreamTime">Tiempo de Sueño</string>
    <string name="water">Agua Ingerida</string>
    <string name="daySteps">Pasos Diarios</string>
    <string name="premium">Premium</string>
    <string name="get_all_features">Obtener acceso a todas las funciones de la app</string>
    <string name="gold_suscription">Suscripción ORO</string>
    <string name="get_gold_features">Obtener acceso a las gráficas y estadísticas de tu sueño, agua y pasos diarios.</string>
    <string name="see_more">Ver más</string>
    <string name="my_health">Mi salud</string>
    <string name="exercise">Ejercicio</string>
    <string name="day_routine">Rutina de Hoy</string>
    <string name="exercises">Ejercicios</string>
    <string name="my_routines">Mis Rutinas</string>
    <string name="my_records">Mis Records</string>
    <string name="take_day_shot">Foto del día</string>
    <string name="alimentation">Alimentación</string>
    <string name="metrics">Métricas</string>
    <string name="calories">Calorías</string>
    <string name="calculator">Cálculos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="metric">Métrica</string>
    <string name="value">Valor</string>
    <string name="date">Fecha</string>
    <string name="time">Hora</string>
    <string name="weight">Peso</string>
    <string name="steps">pasos</string>
</resources>