<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item android:id="@+id/nav_item_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>
        <item android:id="@+id/nav_item_notif"
            android:icon="@drawable/ic_notifications"
            android:title="@string/notifications"/>
        <item android:id="@+id/nav_item_calendar"
            android:icon="@drawable/ic_calendar"
            android:title="@string/calendar"/>
    </group>
    <item android:title="@string/account">
        <menu>
            <item android:id="@+id/nav_item_profile"
                android:icon="@drawable/ic_user"
                android:title="@string/profile"/>
            <item android:id="@+id/nav_item_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings"/>
            <item android:id="@+id/nav_item_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout"/>
        </menu>
    </item>
    <item android:title="@string/about">
        <menu>
            <item android:id="@+id/nav_item_about"
                android:icon="@drawable/morhealthlogosvg"
                android:title="Nosotros"/>
        </menu>
    </item>
</menu>