<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home"
        app:showAsAction="ifRoom"
        android:title="@string/home" />

    <item
        android:id="@+id/action_health"
        android:icon="@drawable/ic_heart"
        app:showAsAction="ifRoom"
        android:title="@string/health" />

    <item
        android:id="@+id/action_nutrition"
        android:icon="@drawable/ic_nutrition"
        app:showAsAction="ifRoom"
        android:title="@string/alimentation" />

    <item
        android:id="@+id/action_fitness"
        android:icon="@drawable/ic_dumbbell"
        app:showAsAction="ifRoom"
        android:title="@string/fitness" />
</menu>
